syntax = "proto3";

option go_package = "github.com/lrmnt/AA6_homework/tasks/task_api";
package tasks;

enum Status {
  STATUS_UNKNOWN = 0;
  STATUS_TODO = 1;
  STATUS_IN_PROGRESS = 2;
  STATUS_DONE = 3;
}

enum Action {
  ACTION_UNKNOWN = 0;
  ACTION_CREATED = 1;
  ACTION_MODIFIED = 2;
  ACTION_REASSIGNED = 3;
}

message Task {
  Action action = 1;
  Status status = 2;
  string public_id = 3;
  string title = 4;
  string description = 5;
  int64 cost = 6;
  string user_id = 7;
  string idempotency_key = 8;
}